[gd_scene load_steps=6 format=3 uid="uid://cegydit6x7onr"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_n6waq"]
[ext_resource type="FontFile" uid="uid://b3t7t64bu3bwr" path="res://art/Xolonium-Regular.ttf" id="2_qi5uc"]
[ext_resource type="Texture2D" uid="uid://dfbwpq0emtocx" path="res://art/Logo1.png" id="3_36xhk"]

[sub_resource type="InputEventAction" id="InputEventAction_xy4pk"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_nlafd"]
events = [SubResource("InputEventAction_xy4pk")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_n6waq")

[node name="AntenaPower" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.886275, 0, 0.0823529, 0.952941)

[node name="DeathLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.5
offset_right = 21.5
offset_bottom = 76.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qi5uc")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scores" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 70.0
offset_right = 32.0
offset_bottom = 146.0
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qi5uc")
theme_override_font_sizes/font_size = 60
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreP1" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 70.0
offset_right = 20.0
offset_bottom = 146.0
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 0.368627, 0.301961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qi5uc")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreP2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 10.0
offset_top = 70.0
offset_right = 110.0
offset_bottom = 146.0
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.352941, 0.611765, 0.980392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qi5uc")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -630.0
offset_top = -76.0
offset_right = 650.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qi5uc")
theme_override_font_sizes/font_size = 60
text = "Beaver Project!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -270.0
offset_right = 125.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_qi5uc")
theme_override_font_sizes/font_size = 60
shortcut = SubResource("Shortcut_nlafd")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(640, 230)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_36xhk")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
